--- a/.github/workflows/first-workflow.yaml
+++ b/.github/workflows/first-workflow.yaml
@@ -21,6 +21,6 @@ jobs:
     needs: run-shell-commands
     steps:
       - name: echo a string
-        run: WriteOutput "Windows String"
+        run: Write-Output "Windows String"
       - name: Error Step
         run: doesnotexist
