--- a/.github/workflows/checkout.yaml
+++ b/.github/workflows/checkout.yaml
@@ -2,6 +2,15 @@ name: Checkout
 on: [push]
 
 jobs:
+  checkout-action:
+    runs-on: ubuntu-latest
+    steps:
+      - name: List Files Before
+        run: ls -a
+      - users: action/checkout@v4
+      - name: List Files After
+        run: ls -a
+jobs:
   checkout-and-display-files:
     runs-on: ubuntu-latest
     steps:
