lecture 21 - wf dispatch input

--- a/.github/workflows/manually-triggered.yaml
+++ b/.github/workflows/manually-triggered.yaml
@@ -39,4 +39,4 @@ jobs:
           echo "Number: ${{ inputs.number }}"
           echo "string: ${{ inputs.option }}"
           echo "string: ${{ inputs.boolean }}"
-          echo "string: ${{ inputs.environment }}";
+          echo "string: ${{ inputs.environment }}"
