--- a/.github/workflows/manually-triggered.yaml
+++ b/.github/workflows/manually-triggered.yaml
@@ -37,6 +37,6 @@ jobs:
       - run: |
           echo "String: ${{ inputs.string }}"
           echo "Number: ${{ inputs.number }}"
-          echo "string: ${{ inputs.option }}"
-          echo "string: ${{ inputs.boolean }}"
-          echo "string: ${{ inputs.environment }}"
+          echo "Option: ${{ inputs.option }}"
+          echo "Boolean: ${{ inputs.boolean }}"
+          echo "Environment: ${{ inputs.environment }}"
