--- a/.github/workflows/expressions-and-context.yaml
+++ b/.github/workflows/expressions-and-context.yaml
@@ -13,7 +13,7 @@ jobs:
           echo ${{ null }}
           echo ${{ true }}
           echo ${{ 1 > 2 }}
-          echo ${{ 'string' == 'String' }} # not case sensative
+          echo ${{ 'string' == 'String' }}
           echo ${{ true && false }}
           echo ${{ true || (false && true) }}
       - name: Dump Contexts
