lecture 24 - expressions & context

--- a/.github/workflows/expressions-and-context.yaml
+++ b/.github/workflows/expressions-and-context.yaml
@@ -1,6 +1,6 @@
 name: Epressions & Contexts
 on: [push, pull_request, issues]
-
+run-name: "Epressions & Contexts by ${{ github.actor }}, event: ${{ github.event_name }}"
 jobs:
   using-expressions-and-contexts:
     runs-on: ubuntu-latest
