--- a/.github/workflows/expressions-and-context.yaml
+++ b/.github/workflows/expressions-and-context.yaml
@@ -2,6 +2,17 @@ name: Epressions & Contexts
 on: [push, pull_request, issues]
 run-name: "Epressions & Contexts by ${{ github.actor }}, event: ${{ github.event_name }}"
 jobs:
+  runs-on-issues-and-prs:
+    runs-on: ubuntu-latest
+   # if: github.event_name == 'issues' || github.event_name == 'pull_request'
+   # if: contains('hello', 'll') returns true
+  # if: contains('hello', 'lefl') returns false
+  if: contains(fromJson('["issues", "pull_request"]'), github.event_name)
+  steps:
+    - name: Run only if issue has a bug label
+      if: contains(github.event.issue.labels.*.name, 'bug')
+      # run: echo ${{ join([1,2,3], ', ') }} returns 1, 2, 3
+      run: echo ${{ join(github.event.issue.labels.*.name, ', ') }}
   using-expressions-and-contexts:
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
