--- a/.github/workflows/expressions-and-context.yaml
+++ b/.github/workflows/expressions-and-context.yaml
@@ -7,12 +7,12 @@ jobs:
    # if: github.event_name == 'issues' || github.event_name == 'pull_request'
    # if: contains('hello', 'll') returns true
   # if: contains('hello', 'lefl') returns false
-  if: contains('["issues","pull_request"]', github.event_name)
-  steps:
-    - name: Run only if issue has a bug label
-      if: contains(github.event.issue.labels.*.name, 'bug')
-      # run: echo ${{ join([1,2,3], ', ') }} returns 1, 2, 3
-      run: echo ${{ join(github.event.issue.labels.*.name, ', ') }}
+    if: contains(fromJson('["issues","pull_request"]'), github.event_name)
+    steps:
+      - name: Run only if issue has a bug label
+        if: contains(github.event.issue.labels.*.name, 'bug')
+        # run: echo ${{ join([1,2,3], ', ') }} returns 1, 2, 3
+        run: echo ${{ join(github.event.issue.labels.*.name, ', ') }}
   using-expressions-and-contexts:
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
