--- a/.github/workflows/status-check.yaml
+++ b/.github/workflows/status-check.yaml
@@ -18,7 +18,7 @@ jobs:
         run: echo 'Always Runs'
       - name: Runs When Cancelled
         if: cancelled()
-        runs: echo 'Runs on Cancelled'
+        runs: echo 'Runs on Cancelled!'
   jobs-2:
     runs-on: ubuntu-latest
     needs: job-1
