--- a/.github/workflows/status-check.yaml
+++ b/.github/workflows/status-check.yaml
@@ -1,29 +1,27 @@
 name: Status Check Functions
-on: [ push ]
+on: [push]
 
 jobs:
   job-1:
     runs-on: ubuntu-latest
     steps:
       - name: Step 1
-        run: sleep 20
+        runs: sleep 20
       - name: Runs on Failure
         if: failure()
         run: echo 'Runs only on failure'
       - name: Runs on Success
-        # This is not needed (DEFAULT BEAHAVIOUR)
-        # if: success()
-        run: echo 'Runs on Success'
+        # if: success() This is not needed (DEFAULT BEHAVIOUR)
       - name: Always Runs
-        # if: success() || failure() alternative to always
         if: always()
+        # if: success() || failure() alternative to always
         run: echo 'Always Runs'
       - name: Runs When Cancelled
         if: cancelled()
-        run: echo 'Runs on Cancelled'
-  job-2:
-    runs-on: ubuntu-latest
-    needs: job-1
-    if: failure()
-    steps:
+        runs: echo 'Runs on Cancelled!'
+jobs-2:
+  runs-on: ubuntu-latest
+  needs: job-1
+  if: failure()
+  steps:
     - run: echo 'Job 2'
