--- a/.github/workflows/status-check.yaml
+++ b/.github/workflows/status-check.yaml
@@ -6,20 +6,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Step 1
-        runs: sleep 20
+        run: sleep 20
       - name: Runs on Failure
         if: failure()
         run: echo 'Runs only on failure'
       - name: Runs on Success
         # if: success() This is not needed (DEFAULT BEHAVIOUR)
-        runs: echo 'Runs on Success'
+        run: echo 'Runs on Success'
       - name: Always Runs
         if: always()
         # if: success() || failure() alternative to always
         run: echo 'Always Runs'
       - name: Runs When Cancelled
         if: cancelled()
-        runs: echo 'Runs on Cancelled!'
+        run: echo 'Runs on Cancelled!'
   jobs-2:
     runs-on: ubuntu-latest
     needs: job-1
