--- a/.github/workflows/status-check.yaml
+++ b/.github/workflows/status-check.yaml
@@ -11,7 +11,7 @@ jobs:
         id: step-2
         run: exit 1
       - name: Runs on Failure
-        if: failure() && steps.step-2.comcusion == 'failure'
+        if: failure() && steps.step-2.conclusion == 'failure'
         run: echo 'Step 2 has failed'
       - name: Runs on Success
         # if: success() This is not needed (DEFAULT BEHAVIOUR)
