lecture 27 - default & customer environment variables

--- a/.github/workflows/env-vars.yaml
+++ b/.github/workflows/env-vars.yaml
@@ -8,4 +8,4 @@ jobs:
       - name: Log ENV VAR
         run: echo $GITHUB_REF
       - name: log Context
-        run: echo '${{ github.reg }}'
+        run: echo '${{ github.ref }}'
