--- a/.github/workflows/env-vars.yaml
+++ b/.github/workflows/env-vars.yaml
@@ -1,11 +1,27 @@
 name: Environment Variables
 on: [push]
 
+env:
+  WF_LEVEL_ENV: Available to all jobs
+
 jobs:
   env-vars-and-context:
     runs-on: ubuntu-latest
+    # if $GITHUB_REF == "refs/heads/main' - This won't work as the if is processed before being sent to the runner machine
+    if: github.ref == 'refs/heads/main'
+    env:
+      JOB_LEVEL_ENV: Available to all steps in the env-vars-and-context job
     steps:
       - name: Log ENV VAR
         run: echo $GITHUB_REF
       - name: log Context
         run: echo '${{ github.ref }}'
+      - name: Log Customer ENV Vars
+        env:
+          STEP_LEVEL_ENV: Available to only this step
+          WF_LEVEL_ENV: Overriden in step
+        run: |
+          echo '${{ env.STEP_LEVELENV }}'
+          echo $STEP_LEVEL_ENV
+          echo $WF_LEVEL_ENV
+          echo $JOB_LEVEL_ENV
