--- a/.github/workflows/env-vars.yaml
+++ b/.github/workflows/env-vars.yaml
@@ -21,7 +21,7 @@ jobs:
           STEP_LEVEL_ENV: Available to only this step
           WF_LEVEL_ENV: Overriden in step
         run: |
-          echo '${{ env.STEP_LEVELENV }}'
+          echo '${{ env.STEP_LEVEL_ENV }}'
           echo $STEP_LEVEL_ENV
           echo $WF_LEVEL_ENV
           echo $JOB_LEVEL_ENV
