lecture 29 - configuration variables and secrets

--- a/.github/workflows/vars-and-secrets.yaml
+++ b/.github/workflows/vars-and-secrets.yaml
@@ -11,7 +11,7 @@ jobs:
     ORG_LEVEL_VAR: ${{ vars.ENV_LEVEL_VAR }}
   steps:
     - name: Run only if BOOLEAN_SECRET is true
-      if: env.BOOLEAN_SECRET == 'true'
+      if: env.BOOLEAN_SECRET == 'true'r
       run: echo "I ran"
     - name: Log Vars
       run: |
