lecture 29 - configuration variables and secrets

--- a/.github/workflows/vars-and-secrets.yaml
+++ b/.github/workflows/vars-and-secrets.yaml
@@ -18,4 +18,4 @@ jobs:
         echo '${{ vars.JOBS_RUNNER }}
         ecoh "ORG_LEVEL_VAR: $ORG_LEVEL_VAR"
         ecoh "REPO_LEVEL_VAR: $REPO_LEVEL_VAR"
-        ecoh "ENV_LEVEL_VAR: $ENV_LEVEL_VAR"r
+        ecoh "ENV_LEVEL_VAR: $ENV_LEVEL_VAR"
