lecture 29 - configuration variables and secrets

--- a/.github/workflows/vars-and-secrets.yaml
+++ b/.github/workflows/vars-and-secrets.yaml
@@ -15,7 +15,7 @@ jobs:
       run: echo "I ran"
     - name: Log Vars
       run: |
-        echo '${{ vars.JOBS_RUNNER }}
+        echo '${{ vars.JOBS_RUNNER }}'
         ecoh "ORG_LEVEL_VAR: $ORG_LEVEL_VAR"
         ecoh "REPO_LEVEL_VAR: $REPO_LEVEL_VAR"
         ecoh "ENV_LEVEL_VAR: $ENV_LEVEL_VAR"
