--- a/.github/workflows/vars-and-secrets.yaml
+++ b/.github/workflows/vars-and-secrets.yaml
@@ -2,6 +2,18 @@ name: Variables and Secrets
 on: [push]
 
 jobs:
+  decrypt-file:
+    runs-on: ${{ vars.JOBS_RUNNER }}
+    steps:
+      - uses: actions/checkout@v3
+      - name: Decrypt File
+        env:
+          PASSPHRASE: ${{ secrets.PASSPHRASE }}
+        run: |
+          mkdir $HOME/secrets
+          gpg --quiet --batch --yes --passpharse="$PASSPHRASE" --output $HOME/secrets/secret.json secret.json.gpg
+      - name: View Encrypted File Content (NEVER DO THIS - JUST FOR TESTING)
+        run: cat $HOME/secrets/secret.json
   log-vars:
     runs-on: ${{ vars.JOBS_RUNNER }}
     environment: "staging"
