lecture 30 - encrypting & decrypting large files in a work flow

--- a/.github/workflows/vars-and-secrets.yaml
+++ b/.github/workflows/vars-and-secrets.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: View Encrypted File Content (NEVER DO THIS - JUST FOR TESTING)
         run: cat $HOME/secrets/secret.json
   log-vars:
-    runs-on: ${{ vars.JOBS_RUNNER }}
+    runs-on: ${{ vars.JOBS_RUNNER }}f
     environment: "staging"
     env:
       BOOLEAN_SECRET: ${{ secrets.BOOLEAN_SECRET }}
