lecture 30 - encrypting & decrypting large files in a work flow

--- a/.github/workflows/vars-and-secrets.yaml
+++ b/.github/workflows/vars-and-secrets.yaml
@@ -11,7 +11,7 @@ jobs:
           PASSPHRASE: ${{ secrets.PASSPHRASE }}
         run: |
           mkdir $HOME/secrets
-          gpg --quiet --batch --yes --passpharse="$PASSPHRASE" --output $HOME/secrets/secret.json secret.json.gpg
+          gpg --quiet --batch --yes --passphrase="$PASSPHRASE" --output $HOME/secrets/secret.json secret.json.gpg
       - name: View Encrypted File Content (NEVER DO THIS - JUST FOR TESTING)
         run: cat $HOME/secrets/secret.json
   log-vars:
