--- a/.github/workflows/dynamic-matirx.yaml
+++ b/.github/workflows/dynamic-matirx.yaml
@@ -31,6 +31,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - run: node -v
+      - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
       - run: node -v
