--- a/.github/workflows/dynamic-matirx.yaml
+++ b/.github/workflows/dynamic-matirx.yaml
@@ -13,6 +13,8 @@ on:
 jobs:
   prepare-matrix:
     runs-on: ubuntu-latest
+    outputs:
+      matrix-arrays: ${{ steps.matrix-arrays.outputs.result }}
     steps:
       - uses: actions/github-script@v6
         id: matrix-arrays
@@ -28,10 +30,11 @@ jobs:
           echo '${{ steps.step-1.outputs.step-output }}'
           echo '${{ steps.step-2.outputs.step-output }}'
   node-matrix:
+    needs: prepare-matrix
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
-        node-version: [14, 15, 16]
+        os: ${{ fromJSON(needs.preparematrix.outputs.matrix-arrays) }}
+        node-version: ${{ fromJSON(needs.preparematrix.outputs.matrix-arrays) }}
       fail-fast: true
      # max-parallel: 3
     runs-on: ${{ matrix.os }}
