lecture 36 - step and job outputs & dynamic matrices

--- a/.github/workflows/dynamic-matirx.yaml
+++ b/.github/workflows/dynamic-matirx.yaml
@@ -33,7 +33,7 @@ jobs:
     needs: prepare-matrix
     strategy:
       matrix:
-        os: ${{ fromJSON(needs.prepar-ematrix.outputs.matrix-arrays) }}
+        os: ${{ fromJSON(needs.prepare-matrix.outputs.matrix-arrays) }}
         node-version: ${{ fromJSON(needs.prepare-matrix.outputs.matrix-arrays) }}
       fail-fast: true
      # max-parallel: 3
