--- a/.github/workflows/dynamic-matirx.yaml
+++ b/.github/workflows/dynamic-matirx.yaml
@@ -33,8 +33,8 @@ jobs:
     needs: prepare-matrix
     strategy:
       matrix:
-        os: ${{ fromJSON(needs.prepare-matrix.outputs.matrix-arrays) }}
-        node-version: ${{ fromJSON(needs.prepare-matrix.outputs.matrix-arrays) }}
+        os: ${{ fromJson(needs.prepare-matrix.outputs.matrix-arrays.os) }}
+        node-version: ${{ fromJSON(needs.prepare-matrix.outputs.matrix-arrays.node-version) }}
       fail-fast: true
      # max-parallel: 3
     runs-on: ${{ matrix.os }}
